--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="row">
 					<div class="col-lg-12">
 						<ul class="donate">
-							<li><a href="//cash.me/$JoshGJohnson" target="_blank"><i class="fas fa-2x fa-donate"></i></a></li> <!-- for Cash.app -->
+							<li><a href="//cash.me/$JoshGJohnson" target="_blank"><i class="fas fa-2x fa-donate"></i></a></li>
 						</ul>
 					</div>
 				</div>
