updated counter, details, and primed for polish

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="I'm a web designer, minimalist, in Orlando, FL.">
+    <meta name="description" content="I'm a professional driver, car dweller, minimalist, and I live in Orlando, FL.">
     <meta name="author" content="Josh G. Johnson">
     <meta name="theme" content="#333333">
 <!--
@@ -53,16 +53,16 @@
             <div class="typed_wrap">
               <div id="typed-strings">
                 <p>professional driver</p>
-                <p>web designer</p>
+                <p>car dweller</p>
                 <p>minimalist</p>
                 <p></p>
-                <p>photographer</p>
+                <p>i &#12296;3 photography</p>
                 <p></p>
                 <p>digital nomad</p>
               </div>
               <span id="typed"></span>
             </div>
-          <p>i'm designing a better experience, <br/>but should be back in</p>
+          <p>i'm designing a better experience, <br/>but will be back in</p>
 					<div id="countdown"></div>
           <p>until then, i try to post regularly on:</p>
 				</div>
@@ -131,7 +131,7 @@
 <script>
 $( document ).ready(function() {
 
-var target_date = new Date('December, 01, 2019').getTime();
+var target_date = new Date('March, 31, 2020').getTime();
 var days, hours, minutes, seconds;
 var countdown = document.getElementById('countdown');
  setInterval(function () {
@@ -147,8 +147,8 @@ var countdown = document.getElementById('countdown');
  
 }, 1000);
 
-  /* 
-  
+/* 
+
   // For subscription form
 
 function init() {
@@ -204,11 +204,10 @@ document.body.onmouseup = function (event) {
 document.addEventListener("keydown", keyDown, false);
 
 */
-
+  
 });
   
-</script>
-    
+</script>    
 
   </body>
 </html>
