updated wording, links, and whatnot

--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
                 <p>car dweller</p>
                 <p>minimalist</p>
                 <p></p>
-                <p>i &#12296;3 photography</p>
+                <p>i &#10084; photography</p>
+                <p>and making people smile</p>
                 <p></p>
-                <p>digital nomad</p>
               </div>
               <span id="typed"></span>
             </div>
-          <p>i'm designing a better experience, <br/>but will be back in</p>
+          <p>i'm creating a permanent home for my thoughts and idea's, <br/>it'll be ready in less than</p>
 					<div id="countdown"></div>
           <p>until then, i try to post regularly on:</p>
 				</div>
