updated more links

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 							<li><a href="//twitter.com/joshgjohnson" target="_blank"><i class="fab fa-twitter"></i></a></li>
 							<li><a href="//youtube.com/joshgjohnson" target="_blank"><i class="fab fa-youtube"></i></a></li>
               <li><a href="//twitch.tv/joshgjohnson" target="_blank"><i class="fab fa-twitch"></i></a></li>
-              <li><a href="//psnprofiles.com/?psnId=joshgjohnson" target="_blank"><i class="fab fa-playstation"></i></a></li>
+              <li><a href="//my.playstation.com/profile/joshgjohnson" target="_blank"><i class="fab fa-playstation"></i></a></li>
 							<li><a href="//reddit.com/u/joshgjohnson" target="_blank"><i class="fab fa-reddit-alien"></i></a></li>
 							<li><a href="//facebook.com/joshgjohnson" target="_blank"><i class="fab fa-facebook"></i></a></li>
 							<li><a href="//codepen.io/joshgjohnson" target="_blank"><i class="fab fa-codepen"></i></a></li>
