--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               <li><a href="//my.playstation.com/profile/joshgjohnson" target="_blank"><i class="fab fa-playstation"></i></a></li>
 							<li><a href="//reddit.com/u/joshgjohnson" target="_blank"><i class="fab fa-reddit-alien"></i></a></li>
 							<li><a href="//facebook.com/joshgjohnson" target="_blank"><i class="fab fa-facebook"></i></a></li>
-							<li><a href="//codepen.io/joshgjohnson" target="_blank"><i class="fab fa-codepen"></i></a></li>
+							<!-- li><a href="//codepen.io/joshgjohnson" target="_blank"><i class="fab fa-codepen"></i></a></li -->
 						</ul>
 					</div>
           <p>donate or tip</p>
