cleaned up text

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
           <p>i'm creating a permanent home for my thoughts and idea's, <br/>it'll be ready in less than</p>
 					<div id="countdown"></div>
-          <p>until then, i try to post regularly on:</p>
+          <p>until then, you can find me on:</p>
 				</div>
 				<div class="row">
 					<div class="col-lg-12">
