--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="I'm a professional driver, car dweller, minimalist, and I live in Orlando, FL.">
+    <meta name="description" content="I'm a car dweller and minimalist from Orlando, FL.">
     <meta name="author" content="Josh G. Johnson">
     <meta name="theme" content="#333333">
 <!--
@@ -133,7 +133,7 @@
 <script>
 $( document ).ready(function() {
 
-var target_date = new Date('December, 1, 2020').getTime();
+var target_date = new Date('September, 1, 2022').getTime();
 var days, hours, minutes, seconds;
 var countdown = document.getElementById('countdown');
  setInterval(function () {
