--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
 					<h1>Josh G. Johnson</h1>
             <div class="typed_wrap">
               <div id="typed-out">
-                <p>professional driver</p>
-                <p>car dweller</p>
-                <p>intentional living</p>
-                <p>cookie connoisseur</p>
-                <p>i &#10084; photography</p>
-                <p>and making people smile</p>
+                <p>i'm a car dweller</p>
+		<p>i'm a caffeine addict</p>
+                <p>i'm a cookie connoisseur</p>
+                <p>i'm autistic</p>
+		<p>i &#10084; photography</p>
+                <p>and making people smile :)</p>
                 <p></p>
               </div>
               <span id="typed"></span>
@@ -72,11 +72,13 @@
 							<li><a href="//instagram.com/joshgjohnson" target="_blank"><i class="fab fa-instagram"></i></a></li>
 							<li><a href="//twitter.com/joshgjohnson" target="_blank"><i class="fab fa-twitter"></i></a></li>
 							<li><a href="//youtube.com/joshgjohnson" target="_blank"><i class="fab fa-youtube"></i></a></li>
-              <li><a href="//twitch.tv/joshgjohnson" target="_blank"><i class="fab fa-twitch"></i></a></li>
-              <li><a href="//my.playstation.com/profile/joshgjohnson" target="_blank"><i class="fab fa-playstation"></i></a></li>
+							<li><a href="//tiktok.com/joshgjohnson" target="_blank"><i class="fab fa-tiktok"></i></a></li>
+							<!-- li><a href="//twitch.tv/joshgjohnson" target="_blank"><i class="fab fa-twitch"></i></a></li -->
+							<!-- li><a href="//my.playstation.com/profile/joshgjohnson" target="_blank"><i class="fab fa-playstation"></i></a></li -->
 							<li><a href="//reddit.com/u/joshgjohnson" target="_blank"><i class="fab fa-reddit-alien"></i></a></li>
 							<li><a href="//facebook.com/joshgjohnson" target="_blank"><i class="fab fa-facebook"></i></a></li>
 							<!-- li><a href="//codepen.io/joshgjohnson" target="_blank"><i class="fab fa-codepen"></i></a></li -->
+							<li><a href="//snapchat.com/joshgjohnson" target="_blank"><i class="fab fa-snapchat"></i></a></li>
 						</ul>
 					</div>
           <p>donate or tip</p>
@@ -158,7 +160,7 @@ var countdown = document.getElementById('countdown');
 		typeSpeed: 100,
 		backSpeed: 75,
 		fadeOut: false,
-    loop: true,
+		loop: true,
 		showCursor: false, // show cursor
 	});
 /* 
