--- a/index.html
+++ b/index.html
@@ -70,16 +70,16 @@
 				<div class="row">
 					<div class="col-lg-12">
 						<ul class="social">
-							<li><a href="//instagram.com/joshgjohnson" target="_blank"><i class="fab fa-instagram"></i></a></li>
-							<li><a href="//twitter.com/joshgjohnson" target="_blank"><i class="fab fa-twitter"></i></a></li>
-							<li><a href="//youtube.com/joshgjohnson" target="_blank"><i class="fab fa-youtube"></i></a></li>
-							<li><a href="//tiktok.com/joshgjohnson" target="_blank"><i class="fab fa-tiktok"></i></a></li>
+							<li><a href="//instagram.com/joshgjohnson" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+							<li><a href="//twitter.com/joshgjohnson" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
+							<li><a href="//youtube.com/joshgjohnson" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
+							<li><a href="//tiktok.com/t/ZTRDc6y8V/" target="_blank"><i class="fa-brands fa-tiktok"></i></a></li>
 							<!-- li><a href="//twitch.tv/joshgjohnson" target="_blank"><i class="fab fa-twitch"></i></a></li -->
 							<!-- li><a href="//my.playstation.com/profile/joshgjohnson" target="_blank"><i class="fab fa-playstation"></i></a></li -->
-							<li><a href="//reddit.com/u/joshgjohnson" target="_blank"><i class="fab fa-reddit-alien"></i></a></li>
-							<li><a href="//facebook.com/joshgjohnson" target="_blank"><i class="fab fa-facebook"></i></a></li>
+							<li><a href="//reddit.com/u/joshgjohnson" target="_blank"><i class="fa-brands fa-reddit-alien"></i></a></li>
+							<li><a href="//facebook.com/joshgjohnson" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
 							<!-- li><a href="//codepen.io/joshgjohnson" target="_blank"><i class="fab fa-codepen"></i></a></li -->
-							<li><a href="//snapchat.com/joshgjohnson" target="_blank"><i class="fab fa-snapchat"></i></a></li>
+							<li><a href="//snapchat.com/joshgjohnson" target="_blank"><i class="fa-brands fa-snapchat"></i></a></li>
 						</ul>
 					</div>
           <p>donate or tip</p>
