--- a/index.html
+++ b/index.html
@@ -55,9 +55,8 @@
                 <p>i'm a car dweller</p>
 		<p>i'm a caffeine addict</p>
                 <p>i'm a cookie connoisseur</p>
-                <p>i'm autistic</p>
-		<p></p>
-		<p>i &#10084; photography</p>
+                <p>i'm autistic ^750</p>
+		<p>i ^200 &#9829; photography</p>
                 <p>and making people smile :)</p>
                 <p></p>
               </div>
@@ -158,8 +157,8 @@ var countdown = document.getElementById('countdown');
 		stringsElement: '#typed-out',
 		smartBackspace: true,
 		startDelay: 300,
-		typeSpeed: 100,
-		backSpeed: 75,
+		typeSpeed: 75,
+		backSpeed: 50,
 		fadeOut: false,
 		loop: true,
 		showCursor: false, // show cursor
