--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
 					<h1>Josh G. Johnson</h1>
             <div class="typed_wrap">
               <div id="typed-out">
-                <p>i'm a car dweller</p>
+                <p>i live in my car</p>
 		<p>i'm a caffeine addict</p>
                 <p>i'm a cookie connoisseur</p>
-                <p>i'm autistic ^750</p>
-		<p>i ^200 &#9829; photography</p>
-                <p>and making people smile :)</p>
-                <p></p>
+                <p>i'm autistic^1000</p>
+		<p>i ^250&hearts; ^250photography</p>
+                <p>and making people smile :)^2000</p>
+                <p>^2000</p>
               </div>
               <span id="typed"></span>
             </div>
@@ -78,8 +78,7 @@
 							<li><a href="//reddit.com/u/joshgjohnson" target="_blank"><i class="fa-brands fa-reddit-alien"></i></a></li>
 							<li><a href="//facebook.com/joshgjohnson" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
 							<!-- li><a href="//codepen.io/joshgjohnson" target="_blank"><i class="fab fa-codepen"></i></a></li -->
-							<li><a href="//snapchat.com/joshgjohnson" target="_blank"><i class="fa-brands fa-snapchat"></i></a></li>
-						</ul>
+							<li><a href="//snapchat.com/add/joshgjohnson" target="_blank"><i class="fa-brands fa-snapchat-ghost"></i></a></li>
 					</div>
           <p>donate or tip</p>
 				</div>
@@ -156,7 +155,7 @@ var countdown = document.getElementById('countdown');
 	var typed = new Typed('#typed', {
 		stringsElement: '#typed-out',
 		smartBackspace: true,
-		startDelay: 300,
+		startDelay: 500,
 		typeSpeed: 75,
 		backSpeed: 50,
 		fadeOut: false,
