--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="I'm a car dweller and minimalist from Orlando, FL.">
-    <meta name="author" content="Josh G. Johnson">
+    <meta name="description" content="AutismOverland">
+    <meta name="author" content="thirteen">
     <meta name="theme" content="#333333">
 <!--
   removed until assets have been updated
@@ -25,7 +25,7 @@
     <link rel="icon" type="image/png" href="//dl.dropboxusercontent.com/u/25306892/icons/favicon-16x16.png" sizes="16x16" />
 		<link rel="icon" type="image/x-icon" href="https://dl.dropboxusercontent.com/u/25306892/icons/favicon.ico" />
 -->
-    <title>Josh G Johnson.com</title>
+    <title>AutismOverland.com</title>
 
 		<!-- Bootstrap CDN -->
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -48,44 +48,45 @@
     <div class="container">
 			<div class="row">
 				<div class="col-sm-12 col-md-12 col-lg-12">
-					<img class="logo" src="//s3-us-west-2.amazonaws.com/joshgjohnson-aws/assets/images/profile.jpg">
-					<h1>Josh G. Johnson</h1>
+					<img class="logo" src="https://twitter.com/autismoverland/photo" alt="Twitter Profile Picture"">
+					<h1>Welcome to AutismOverland</h1>
             <div class="typed_wrap">
               <div id="typed-out">
-                <p>i live in my car</p>
-		<p>i'm a caffeine addict</p>
-                <p>i'm a cookie connoisseur</p>
-                <p>i'm autistic^1000</p>
-		<p>i ^250&hearts; ^250photography</p>
-                <p>and making people smile :)^2000</p>
-                <p>^2000</p>
+                <p>autistic and adhd friendly spaces</p>
+		<p>tips, tricks, and life hacks</p>
+                <p>how-to guides and tutorials</p>
+                <p>anxiety free travel and safe spaces^1000</p>
+		<p>neurodivergent friendly companies</p>
+                <p>support and advocacy^2000</p>
+                <p>community forums & discussions^2000</p>
               </div>
               <span id="typed"></span>
             </div>
-          <p>i'm creating a permanent home for my thoughts and idea's, <br/>it'll be ready in less than</p>
+					<p>AutismOverland is launching soon, bringing a dedicated space for neurodivergent adventurers to explore the world on their own terms. This website will feature a blog with personal experiences, insights, and advice on overlanding as an autistic traveler. Through stunning photography, detailed gear reviews, and firsthand travel accounts, AutismOverland will provide an authentic look at life on the road while embracing the unique strengths and challenges of neurodivergence.</p>
+					<p>Whether you’re new to overlanding or a seasoned traveler, AutismOverland will offer practical tips, resources, and community support tailored to neurodivergent needs. From sensory-friendly travel hacks to the best gear for solo adventures, the site will be a hub for those seeking freedom, self-reliance, and connection with nature. Stay tuned for the official launch and start your journey with AutismOverland!</p>
 					<div id="countdown"></div>
-          <p>until then, you can find me on:</p>
+          <p>until then, you can find us on:</p>
 				</div>
 				<div class="row">
 					<div class="col-lg-12">
 						<ul class="social">
-							<li><a href="//instagram.com/joshgjohnson" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
-							<li><a href="//twitter.com/joshgjohnson" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
-							<li><a href="//youtube.com/joshgjohnson" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
-							<li><a href="//tiktok.com/t/ZTRDc6y8V/" target="_blank"><i class="fa-brands fa-tiktok"></i></a></li>
+							<li><a href="//instagram.com/autismoverland" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+							<li><a href="//twitter.com/autismoverland" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
+							<li><a href="//youtube.com/@autismoverland" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
+							<li><a href="//tiktok.com/autismoverland" target="_blank"><i class="fa-brands fa-tiktok"></i></a></li>
 							<!-- li><a href="//twitch.tv/joshgjohnson" target="_blank"><i class="fab fa-twitch"></i></a></li -->
 							<!-- li><a href="//my.playstation.com/profile/joshgjohnson" target="_blank"><i class="fab fa-playstation"></i></a></li -->
-							<li><a href="//reddit.com/u/joshgjohnson" target="_blank"><i class="fa-brands fa-reddit-alien"></i></a></li>
-							<li><a href="//facebook.com/joshgjohnson" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
+							<li><a href="//reddit.com/u/autismoverland" target="_blank"><i class="fa-brands fa-reddit-alien"></i></a></li>
+							<!-- li><a href="//facebook.com/joshgjohnson" target="_blank"><i class="fa-brands fa-facebook"></i></a></li -->
 							<!-- li><a href="//codepen.io/joshgjohnson" target="_blank"><i class="fab fa-codepen"></i></a></li -->
-							<li><a href="//snapchat.com/add/joshgjohnson" target="_blank"><i class="fa-brands fa-snapchat-ghost"></i></a></li>
+							<!-- li><a href="//snapchat.com/add/joshgjohnson" target="_blank"><i class="fa-brands fa-snapchat-ghost"></i></a></li -->
 					</div>
           <p>donate or tip</p>
 				</div>
         <div class="row">
 					<div class="col-lg-12">
 						<ul class="donate">
-							<li><a href="//cash.me/$JoshGJohnson" target="_blank"><i class="fas fa-2x fa-donate"></i></a></li>
+							<li><a href="//cash.me/$AutismOverland" target="_blank"><i class="fas fa-2x fa-donate"></i></a></li>
 						</ul>
 					</div>
 				</div>
@@ -117,8 +118,8 @@
         </div>
         -->
 				<div class="copyright">
-          <p>made with <a href="https://www.google.com/search?q=cold+brew+instructions" target="_blank"><i class="fas fa-coffee" style="color:#abc;"></i></a> , some <a href="https://norml.org/legal/item/florida-medical-marijuana-law" target="_blank"><i class="fas fa-cannabis" style="color:#183;"></i></a> and lots of <i class="far fa-heart" style="color:#ff0034;"></i> by <a href="//twitter.com/joshgjohnson" style="color:#b2babb;">josh g johnson</a>
-            <br/>hosted on <i class="fab fa-github" style="color:#4078c0;"></i> <a href="//pages.github.com/" target="_blank" style="color:#b2babb;">Github Pages</a>. here's the <a href="//github.com/joshgjohnson/coming-soon" target="_blank" style="color:#b2babb;">Source Code</a>
+          <p>made with <a href="https://www.google.com/search?q=cold+brew+instructions" target="_blank"><i class="fas fa-coffee" style="color:#abc;"></i></a> , some <a href="https://cannabis.colorado.gov" target="_blank"><i class="fas fa-cannabis" style="color:#183;"></i></a> and lots of <i class="far fa-heart" style="color:#ff0034;"></i> by <a href="//twitter.com/13audhd" style="color:#b2babb;">thirteen</a>
+            <br/>hosted on <i class="fab fa-github" style="color:#4078c0;"></i> <a href="//pages.github.com/" target="_blank" style="color:#b2babb;">Github Pages</a>. here's the <a href="//github.com/13AuDHD/coming-soon" target="_blank" style="color:#b2babb;">Source Code</a>
           <br/><a href="privacy.html" target="_blank">privacy policy</a> | <a href="communication.html" target="_blank">communication policy</a> | <a href="subscription.html" target="_blank">subscription</a></p>
         </p>
 				</div>
@@ -134,7 +135,7 @@
 <script>
 $( document ).ready(function() {
 
-var target_date = new Date('October, 1, 2022').getTime();
+var target_date = new Date('April, 20, 2025').getTime();
 var days, hours, minutes, seconds;
 var countdown = document.getElementById('countdown');
  setInterval(function () {
