--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="container">
 			<div class="row">
 				<div class="col-sm-12 col-md-12 col-lg-12">
-					<img class="logo" src="https://www.dropbox.com/scl/fi/wjr3zwadickjlom3b6kc5/logo.png?rlkey=nyksi57oqdeg4y8km8qxwuudx&st=yzmanmz9&dl=0" alt="logo">
+					<img class="logo" src="https://www.dropbox.com/scl/fi/wjr3zwadickjlom3b6kc5/logo.png" alt="logo">
 					<h1>Welcome to AutismOverland</h1>
             <div class="typed_wrap">
               <div id="typed-out">
