--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
     <div class="container">
 			<div class="row">
 				<div class="col-sm-12 col-md-12 col-lg-12">
-					<img class="logo" src="https://www.dropbox.com/scl/fi/wjr3zwadickjlom3b6kc5/logo.png" alt="logo">
-					<h1>Welcome to AutismOverland</h1>
+					<img class="logo" src="https://www.dropbox.com/scl/fi/wjr3zwadickjlom3b6kc5/logo.png?rlkey=nyksi57oqdeg4y8km8qxwuudx&st=b6zvmcd4&raw=1" alt="logo">
+					<p><h1>Welcome to AutismOverland</h1></p>
             <div class="typed_wrap">
               <div id="typed-out">
                 <p>autistic and adhd friendly spaces</p>
@@ -62,7 +62,7 @@
               </div>
               <span id="typed"></span>
             </div>
-					<p>AutismOverland is launching soon, bringing a dedicated space for neurodivergent adventurers to explore the world on their own terms. This website will feature a blog with personal experiences, insights, and advice on overlanding as an autistic traveler. Through stunning photography, detailed gear reviews, and firsthand travel accounts, AutismOverland will provide an authentic look at life on the road while embracing the unique strengths and challenges of neurodivergence.</p>
+					<p>AutismOverland is launching soon, bringing a dedicated space for neurodivergent adventurers to explore the world on their own terms. This website will feature a blog with personal experiences, insights, and advice on overlanding as an autistic traveler. Through stunning photography, detailed gear reviews, and firsthand travel accounts, AutismOverland will provide an authentic look at neurodivergent life on the road.</p>
 					<p>Whether you’re new to overlanding or a seasoned traveler, AutismOverland will offer practical tips, resources, and community support tailored to neurodivergent needs. From sensory-friendly travel hacks to the best gear for solo adventures, the site will be a hub for those seeking freedom, self-reliance, and connection with nature. Stay tuned for the official launch and start your journey with AutismOverland!</p>
 					<div id="countdown"></div>
           <p>until then, you can find us on:</p>
