--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
               </div>
               <span id="typed"></span>
             </div>
-		<p>AutismOverland is launching soon, bringing a dedicated space for neurodivergent adventurers to explore the world on their own terms. This website will feature a blog with personal experiences, insights, and advice on overlanding as an autistic traveler. Through stunning photography, detailed gear reviews, and firsthand travel accounts, AutismOverland will provide an authentic look at neurodivergent life on the road.</p>
-		<p>Whether you’re new to overlanding or a seasoned traveler, AutismOverland will offer practical tips, resources, and community support tailored to neurodivergent needs. From sensory-friendly travel hacks to the best gear for solo adventures, the site will be a hub for those seeking freedom, self-reliance, and connection with nature. Stay tuned for the official launch and start your journey with AutismOverland!</p>
+		<p>AutismOverland is launching soon as a dedicated space for neurodivergent adventurers. Featuring a blog with personal insights, travel tips, gear reviews, and stunning photography, it will provide resources and community support for autistic travelers. Whether you’re new to overlanding or experienced, AutismOverland will offer sensory-friendly travel hacks, solo adventure guides, and a hub for freedom, self-reliance, and connection with nature. Stay tuned for the launch!</p>
 		<h1>going live in...</h1>
 		<div id="countdown"></div>
           	<p>until then, you can find us on:</p>
