--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 					<p><img class="logo" src="https://www.dropbox.com/scl/fi/wjr3zwadickjlom3b6kc5/logo.png?rlkey=nyksi57oqdeg4y8km8qxwuudx&st=b6zvmcd4&raw=1" alt="logo"></p>
             <div class="typed_wrap">
               <div id="typed-out">
-                <p>autistic and adhd friendly spaces</p>
+                <p>autistic & adhd friendly spaces</p>
 		<p>tips, tricks, and life hacks</p>
                 <p>how-to guides and tutorials</p>
-                <p>anxiety free travel and safe spaces^1000</p>
+                <p>anxiety free travel^1000</p>
 		<p>neurodivergent friendly companies</p>
                 <p>support and advocacy^2000</p>
                 <p>community forums & discussions^2000</p>
@@ -64,9 +64,9 @@
 		<p>AutismOverland is launching soon as a dedicated space for neurodivergent adventurers. Featuring a blog with personal insights, travel tips, gear reviews, and stunning photography, it will provide resources and community support for autistic travelers. Whether you’re new to overlanding or experienced, AutismOverland will offer sensory-friendly travel hacks, solo adventure guides, and a hub for freedom, self-reliance, and connection with nature. Stay tuned for the launch!</p>
 		<h1>going live in...</h1>
 		<div id="countdown"></div>
-          	<p>until then, you can find us on:</p>
 			</div>
 				<div class="row">
+					until then, you can find us on:
 					<div class="col-lg-12">
 						<ul class="social">
 							<li><a href="//instagram.com/autismoverland" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
