Update metadata and title in communication.html

--- a/communication.html
+++ b/communication.html
@@ -15,8 +15,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="I'm a web designer, minimalist, in Orlando, FL.">
-    <meta name="author" content="Josh G. Johnson">
+    <meta name="description" content="">
+    <meta name="author" content="Thirteen Nebula">
     <meta name="theme" content="#333333">
 <!--
   removed until assets have been updated
@@ -25,7 +25,7 @@
     <link rel="icon" type="image/png" href="//dl.dropboxusercontent.com/u/25306892/icons/favicon-16x16.png" sizes="16x16" />
 		<link rel="icon" type="image/x-icon" href="https://dl.dropboxusercontent.com/u/25306892/icons/favicon.ico" />
 -->
-    <title>Josh G Johnson.com</title>
+    <title>AutismOverland</title>
 
 		<!-- Bootstrap CDN -->
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -48,16 +48,16 @@
     <div class="container">
 			<div class="row">
 				<div class="col-sm-12 col-md-12 col-lg-12">
-					<img class="logo" src="//s3-us-west-2.amazonaws.com/joshgjohnson-aws/assets/images/profile.jpg">
-					<h1>Josh G. Johnson</h1>
+					<!-- img class="logo" src="//s3-us-west-2.amazonaws.com/joshgjohnson-aws/assets/images/profile.jpg" -->
+					<h1>AutismOverland</h1>
           <h2>Communication Policy</h2>
           <p>&nbsp;</p>
           <p>If you send me your email address or subscribe to a list or notification on my website, you agree that I can contact you via email for that specific purpose and nothing more. You also hold the right to revoke that privilege at any time by contacting me via a simple email and asking that I stop sending you stuff. </p>
           <p>&nbsp;</p>
 				</div>
 				<div class="copyright">
-          <p>made with <a href="https://www.google.com/search?q=cold+brew+instructions" target="_blank"><i class="fas fa-coffee" style="color:#abc;"></i></a> , some <a href="https://norml.org/legal/item/florida-medical-marijuana-law" target="_blank"><i class="fas fa-cannabis" style="color:#183;"></i></a> and lots of <i class="far fa-heart" style="color:#ff0034;"></i> by <a href="//twitter.com/joshgjohnson" style="color:#b2babb;">josh g johnson</a>
-            <br/>hosted on <i class="fab fa-github" style="color:#4078c0;"></i> <a href="//pages.github.com/" target="_blank" style="color:#b2babb;">Github Pages</a>. here's the <a href="//github.com/joshgjohnson/coming-soon" target="_blank" style="color:#b2babb;">Source Code</a>
+          <p>made with <a href="https://www.google.com/search?q=cold+brew+instructions" target="_blank"><i class="fas fa-coffee" style="color:#abc;"></i></a> , some <a href="https://norml.org/legal/item/florida-medical-marijuana-law" target="_blank"><i class="fas fa-cannabis" style="color:#183;"></i></a> and lots of <i class="far fa-heart" style="color:#ff0034;"></i> by <a href="//13audhd.me" style="color:#b2babb;">thirteen</a>
+            <br/>hosted on <i class="fab fa-github" style="color:#4078c0;"></i> <a href="//pages.github.com/" target="_blank" style="color:#b2babb;">Github Pages</a>. here's the <a href="//github.com/13audhd/coming-soon" target="_blank" style="color:#b2babb;">Source Code</a>
           <br/><a href="privacy.html" target="_blank">privacy policy</a> | <a href="communication.html" target="_blank">communication policy</a> | <a href="subscription.html" target="_blank">subscription</a></p>
         </p>
 				</div>
