--- a/privacy.html
+++ b/privacy.html
@@ -15,8 +15,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="I'm a web designer, minimalist, in Orlando, FL.">
-    <meta name="author" content="Josh G. Johnson">
+    <meta name="description" content="...">
+    <meta name="author" content="Thirteen Nebula">
     <meta name="theme" content="#333333">
 <!--
   removed until assets have been updated
@@ -25,7 +25,7 @@
     <link rel="icon" type="image/png" href="//dl.dropboxusercontent.com/u/25306892/icons/favicon-16x16.png" sizes="16x16" />
 		<link rel="icon" type="image/x-icon" href="https://dl.dropboxusercontent.com/u/25306892/icons/favicon.ico" />
 -->
-    <title>Josh G Johnson.com</title>
+    <title>AutismOverland</title>
 
 		<!-- Bootstrap CDN -->
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -48,8 +48,8 @@
     <div class="container">
 			<div class="row">
 				<div class="col-sm-12 col-md-12 col-lg-12">
-					<img class="logo" src="//s3-us-west-2.amazonaws.com/joshgjohnson-aws/assets/images/profile.jpg">
-					<h1>Josh G. Johnson</h1>
+					<!-- img class="logo" src="//s3-us-west-2.amazonaws.com/joshgjohnson-aws/assets/images/profile.jpg" -->
+					<h1>AutismOverland</h1>
           <h2>Privacy Policy</h2>
           <p>&nbsp;</p>
           <p>I don't collect much other than anonymous browser data for analytical purposes and won't sell, trade, barter, exchange, or otherwise distribute your personal information you send to me or this website.</p>
