Update author name and countdown target date

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="AutismOverland">
-    <meta name="author" content="thirteen">
+    <meta name="author" content="Thirteen Nebula">
     <meta name="theme" content="#333333">
 <!--
   removed until assets have been updated
@@ -66,7 +66,7 @@
 		<div id="countdown"></div>
 			</div>
 				<div class="row">
-					until then, you can find us on:
+					until then, you can follow us on:
 					<div class="col-lg-12">
 						<ul class="social">
 							<li><a href="//instagram.com/autismoverland" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
@@ -130,7 +130,7 @@
 <script>
 $( document ).ready(function() {
 
-var target_date = new Date('May, 15, 2025').getTime();
+var target_date = new Date('January, 01, 2026').getTime();
 var days, hours, minutes, seconds;
 var countdown = document.getElementById('countdown');
  setInterval(function () {
