--- a/index.html
+++ b/index.html
@@ -51,13 +51,12 @@
 					<p><img class="logo" src="https://www.dropbox.com/scl/fi/wjr3zwadickjlom3b6kc5/logo.png?rlkey=nyksi57oqdeg4y8km8qxwuudx&st=b6zvmcd4&raw=1" alt="logo"></p>
             <div class="typed_wrap">
               <div id="typed-out">
-                <p>autistic & adhd friendly spaces</p>
-		<p>tips, tricks, and life hacks</p>
+                <p>autistic & adhd friendly outdoor spaces</p>
+				<p>tips, tricks, and ^2000 life hacks</p>
                 <p>how-to guides and tutorials</p>
                 <p>anxiety free travel^1000</p>
-		<p>neurodivergent friendly companies</p>
+				<p>neurodivergent friendly companies</p>
                 <p>support and advocacy^2000</p>
-                <p>community forums & discussions^2000</p>
               </div>
               <span id="typed"></span>
             </div>
@@ -130,7 +129,7 @@
 <script>
 $( document ).ready(function() {
 
-var target_date = new Date('January, 01, 2026').getTime();
+var target_date = new Date('February, 13, 2026').getTime();
 var days, hours, minutes, seconds;
 var countdown = document.getElementById('countdown');
  setInterval(function () {
